--- a/src/classes/AngularDemoController.cls
+++ b/src/classes/AngularDemoController.cls
@@ -5,6 +5,7 @@ public with sharing class AngularDemoController {
     //Add Comment For Github
     //Line 4 Comment   
     //New Comment Line 3
+    //New Comment Master 2
 
     public class Accountwrap {
         //Static Variables 
